--- a/Opiniometro_WebApp/Opiniometro_WebAppUITest/Opiniometro_WebAppUITest.csproj
+++ b/Opiniometro_WebApp/Opiniometro_WebAppUITest/Opiniometro_WebAppUITest.csproj
@@ -53,7 +53,7 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AsignarFormulario.cs" />
+    <Compile Include="CodedUITestAsignarFormulario.cs" />
     <Compile Include="FormularioCurso.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UIMap.cs">
