--- a/Opiniometro_WebApp/Opiniometro_WebAppUITest/Opiniometro_WebAppUITest.csproj
+++ b/Opiniometro_WebApp/Opiniometro_WebAppUITest/Opiniometro_WebAppUITest.csproj
@@ -53,6 +53,7 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CodedUITestAsignarFormulario.cs" />
     <Compile Include="CodedUITestItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UIMap.cs">
