--- a/Opiniometro_WebApp/Opiniometro_WebApp/Opiniometro_WebApp.csproj
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Opiniometro_WebApp.csproj
@@ -515,7 +515,6 @@
     <Content Include="Views\Seleccion_Unica\Edit.cshtml" />
     <Content Include="Views\Seleccion_Unica\Index.cshtml" />
     <Content Include="Views\Administrador\CargarUsuarios.cshtml" />
-    <Content Include="Views\Administrador\Index.cshtml" />
     <Content Include="Views\Categoria\Create.cshtml" />
     <Content Include="Views\Categoria\Delete.cshtml" />
     <Content Include="Views\Categoria\Details.cshtml" />
@@ -562,6 +561,7 @@
     <Content Include="Views\FormularioCurso\SeleccionUnica.cshtml" />
     <Content Include="Views\FormularioCurso\Escalar.cshtml" />
     <Content Include="Views\CrearFormulario\SeleccionUnicaVParcial.cshtml" />
+    <Content Include="Views\Administrador\CrearUsuario.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\ArchivosCargados\" />
